--- a/index.html
+++ b/index.html
@@ -1,32 +1,40 @@
 <!DOCTYPE html>
 <div align="center">
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=Big5"></head><body>
-<div style="position:relative;">
-  <div style="opacity:0.5;position:absolute;left:550px;top:-30px;width:300px;height:150px;background-color:#40B3DF"></div>                         
-  <div style="opacity:0.3;position:absolute;left:520px;top:20px;width:100px;height:170px;background-color:#8AC007"></div>               
-  <div style="margin-top:30px;width:360px;height:130px;padding:20px;border-radius:10px;border:10px solid #EE872A;font-size:120%;">
-  <h1> Introduce my self</h1>
-  <div style="letter-spacing:12px;font-size:15px;position:relative;left:25px;top:25px;">The boy who is the king of X box games</div>               
-  <div style="color:green;letter-spacing:12px;font-size:15px;position:relatve;lieft:25px;top:30px;">Handsome,left:
-  <span style="background-color:#B4009E;color:#ffffff;">cool</span></div>
-  </div>
-</div>
-</body></html>
-<html>
-<body>
+    <html>
 
-<h2>                                                     
+    <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=Big5">
+    </head>
+
+    <body>
+        <div style="position:relative;">
+            <div style="opacity:0.5;position:absolute;left:550px;top:-30px;width:300px;height:150px;background-color:#40B3DF"></div>
+            <div style="opacity:0.3;position:absolute;left:520px;top:20px;width:100px;height:170px;background-color:#8AC007"></div>
+            <div style="margin-top:30px;width:360px;height:130px;padding:20px;border-radius:10px;border:10px solid #EE872A;font-size:120%;">
+                <h1> Introduce my self</h1>
+                <div style="letter-spacing:12px;font-size:15px;position:relative;left:25px;top:25px;">The boy who is the king of X box games</div>
+                <div style="color:green;letter-spacing:12px;font-size:15px;position:relatve;lieft:25px;top:30px;">Handsome,left:
+                    <span style="background-color:#B4009E;color:#ffffff;">cool</span></div>
+            </div>
+        </div>
+    </body>
+
+    </html>
+    <html>
+
+    <body>
+        <h2>
 <div class =''test''>
 Hi
 </body>
 </html>
-<html>        
+<html>
 <head>
                 <title>Jerry's resume</title>
 
 </head>
 <style>
-body { font: 16px Helvetica, Sans-Serif; line-height: 24px; background:url(img/478636.jpg);}                               
+body { font: 16px Helvetica, Sans-Serif; line-height: 24px; background:url(img/478636.jpg);}
 h1   {color:black}
 p    {color:green}
 </style>
@@ -34,36 +42,60 @@ p    {color:green}
 
 <div id="page-wrap">
     <img src="img/P1030618.jpg" alt="Picture @ Portland">
- </div>       
-<h1> This is Jerry</h1><p> 2003 9/12 Taiwan </p>                 
-<h2>communicate:</h2><p>Email:jerryyma912@gmail.com</p>     
-                     <p>Line: jerryma912</p>
- <h2> About me:</h2>                      
-                
-                 <p>* 12 years old.</p>
-                <p> * fifth grade.</p>
-                 <p>*Favorite sport is table tennis.</p>
-                 <h2> Experiences :</h2>
-                <p> *I have a little experience of HTML.</p>
-                <p> *And know a little bit program.</p>
-                <p>*And I know a little bit css.</br>
-                <br>                                </br>
-                <h2>Skills</h2>
-                <p>*I know how to make a html program.</p>
-                <p>*I a pro of x box games.</p>
-                <p>*I know how to made a robot.</p>
-                <p>*My English is very well.</p>
-<table>
-     <tr>
+ </div>
+<h1> This is Jerry</h1><p> 2003 9/12 Taiwan </p>
+<h2>communicate:</h2>
+        <p>Email:jerryyma912@gmail.com</p>
+        <p>Line: jerryma912</p>
+        <h2> About me:</h2>
+        <p>* 12 years old.</p>
+        <p> * fifth grade.</p>
+        <p>*Favorite sport is table tennis.</p>
+        <h2> Experiences :</h2>
+        <p> *I have a little experience of HTML.</p>
+        <p> *And know a little bit program.</p>
+        <p>*And I know a little bit css.</br>
+            <br> </br>
+            <h2>Skills</h2>
+            <p>*I know how to make a html program.</p>
+            <p>*I a pro of x box games.</p>
+            <p>*I know how to made a robot.</p>
+            <p>*My English is very well.</p>
+            <table>
+                <tr>
+                    <th></th>
+                    <th scope='' col ''>J</th>
+                    <th scope='' coll ''>E</th>
+                    <th scope='' coll ''>R</th>
+                    <th scope='' coll ''>R</th>
+                    <th scope='' coll ''>Y</th>
+                    <th scope='' coll ''>J</th>
+                    <th scope='' coll ''>E</th>
+                    <th scope='' coll ''>R</th>
+                    <th scope='' coll ''>R</th>
+                    <th scope='' coll ''>Y</th>
+                    <th scope='' coll ''>J</th>
+                    <th scope='' coll ''>E</th>
+                    <th scope='' coll ''>R</th>
+                    <th scope='' coll ''>R</th>
+                    <th scope='' coll ''>Y</th>
+                </tr>
+                <tr>
+                    <th scope='' coll ''>J</th>
+                    <th scope='' coll ''>E</th>
+                    <th scope='' coll ''>R</th>
+                    <th scope='' coll ''>R</th>
+                    <th scope='' coll ''>Y</th>
+                    <th scope='' coll ''>J</th>
+                    <th scope='' coll ''>E</th>
+                    <th scope='' coll ''>R</th>
+                    <th scope='' coll ''>R</th>
+                    <th scope='' coll ''>Y</th>
+                    <th scope='' coll ''>J</th>
+                    <th scope='' coll ''>E</th>
+                    <th scope='' coll ''>R</th>
+                    <th scope='' coll ''>R</th>
+                    <th scope='' coll ''>Y</th>
+    </body>
 
-         <th></th>
-         <th scope=''col''>J</th><th scope=''coll''>E</th><th scope=''coll''>R</th><th scope=''coll''>R</th><th scope=''coll''>Y</th>
-         <th scope=''coll''>J</th><th scope=''coll''>E</th><th scope=''coll''>R</th><th scope=''coll''>R</th><th scope=''coll''>Y</th>
-         <th scope=''coll''>J</th><th scope=''coll''>E</th><th scope=''coll''>R</th><th scope=''coll''>R</th><th scope=''coll''>Y</th>
-     </tr>
-     <tr>
-           <th scope=''coll''>J</th><th scope=''coll''>E</th><th scope=''coll''>R</th><th scope=''coll''>R</th><th scope=''coll''>Y</th>
-           <th scope=''coll''>J</th><th scope=''coll''>E</th><th scope=''coll''>R</th><th scope=''coll''>R</th><th scope=''coll''>Y</th>
-           <th scope=''coll''>J</th> <th scope=''coll''>E</th><th scope=''coll''>R</th><th scope=''coll''>R</th>  <th scope=''coll''>Y</th>              
-</body>
-</html>
+    </html>
